k8s/aws/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
  labels:
    name: petclinic
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/part-of: spring-petclinic
