k8s/aws/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app: petclinic
    app.kubernetes.io/name: petclinic
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
